--- a/eco-core/core-plugin/src/main/resources/paper-plugin.yml
+++ b/eco-core/core-plugin/src/main/resources/paper-plugin.yml
@@ -1,8 +1,10 @@
 name: eco
 version: ${projectVersion}
 main: com.willfp.eco.internal.spigot.EcoImpl
-api-version: 1.20
+api-version: "1.20"
 load: STARTUP
+
+folia-supported: true
 
 dependencies:
   - name: ProtocolLib
